remove usage of Collectors.toList
the method toList exists on streams that can be used instead